@@ -1,0 +1,42 @@
+use strict;
+use warnings FATAL => 'all';
+
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
+use Test::DZil;
+use Path::Tiny;
+use File::pushd 'pushd';
+
+my $tzil = Builder->from_config(
+    { dist_root => 't/does-not-exist' },
+    {
+        add_files => {
+            path(qw(source dist.ini)) => simple_ini(
+                [ GatherDir => ],
+                [ ExtraTests => ],
+                [ 'Test::CleanNamespaces' ],
+            ),
+            path(qw(source lib Foo.pm)) => "package Foo;\n1;\n",
+        },
+    },
+);
+$tzil->build;
+
+my $build_dir = path($tzil->tempdir)->child('build');
+my $file = $build_dir->child(qw(t release-clean-namespaces.t));
+ok(-e $file, 'test created under xt/ and moved to t/release- by [ExtraTests]');
+
+my $content = $file->slurp_utf8;
+unlike($content, qr/[^\S\n]\n/m, 'no trailing whitespace in generated test');
+
+subtest 'run the generated test' => sub
+{
+    my $wd = pushd $build_dir;
+
+    local $ENV{RELEASE_TESTING} = 1;
+    do $file;
+    note 'ran tests successfully' if not $@;
+    fail($@) if $@;
+};
+
+done_testing;
